--- a/WebInternetProgramming/appsettings.json
+++ b/WebInternetProgramming/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=5.166.240.53;Database=WebInet;Trusted_Connection=false;User Id=User;Password=User;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
